--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"env-cmd -f ./config/dev.env nodemon index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon index.js",
     "start": "nodemon index.js"
   },
   "author": "",
@@ -20,6 +20,8 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "mongo": "^0.1.0",
+    "mongod": "^2.0.0",
     "mongoose": "^6.8.2",
     "validator": "^13.7.0"
   },
