--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env-cmd -f ./config/dev.env nodemon index.js",
-    "start": "nodemon index.js"
+    "dev": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +15,6 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
@@ -24,8 +22,6 @@
     "mongod": "^2.0.0",
     "mongoose": "^6.8.2",
     "validator": "^13.7.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
   }
+  
 }
