--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "json-server": "^0.17.1",
     "jsonwebtoken": "^9.0.0",
     "mongo": "^0.1.0",
     "mongod": "^2.0.0",
     "mongoose": "^6.8.2",
     "validator": "^13.7.0"
   }
-  
 }
