--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.5",
+    "twilio": "^3.84.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
