--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,8 @@
     "mongo": "^0.1.0",
     "mongod": "^2.0.0",
     "mongoose": "^6.8.2",
+    "nodemon": "^2.0.20",
+    "twilio": "^3.84.0",
     "validator": "^13.7.0"
   }
 }
